--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -2,8 +2,8 @@ com.tngtech.configbuilder.exception.NoConstructorFoundException = your config cl
 org.apache.commons.cli.ParseException = unable to parse command line arguments
 com.tngtech.configbuilder.exception.TargetTypeException = cannot set field %s of type %s to object of type %s
 java.lang.InstantiationException = an InstantiationException was thrown while instantiating config class
-java.lang.reflect.InvocationTargetException = an InstantiationException was thrown while instantiating config class
-java.lang.IllegalAccessException = an IllegalAccessException was thrown while instantiating config class or setting fields
+java.lang.reflect.InvocationTargetException = an InvocationTargetException was thrown while instantiating config class
+java.lang.IllegalAccessException = an IllegalAccessException was thrown while instantiating config class, setting fields or invoking validation method
 com.tngtech.configbuilder.exception.ValidatorException = Validation found the following constraint violations:
 java.lang.IllegalArgumentException = cannot set field fieldName of type fieldType to object of type valueType
 standardMessage = %s was thrown
