fixed EN error messages

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -5,5 +5,5 @@ java.lang.InstantiationException = an InstantiationException was thrown while in
 java.lang.reflect.InvocationTargetException = an InvocationTargetException was thrown while instantiating config class
 java.lang.IllegalAccessException = an IllegalAccessException was thrown while instantiating config class, setting fields or invoking validation method
 com.tngtech.configbuilder.exception.ValidatorException = Validation found the following constraint violations:
-java.lang.IllegalArgumentException = cannot set field fieldName of type fieldType to object of type valueType
+java.lang.IllegalArgumentException = cannot set field %s of type %s to object of type %s
 standardMessage = %s was thrown
