--- a/pom.xml
+++ b/pom.xml
@@ -2,28 +2,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
     <groupId>com.tngtech.java</groupId>
     <artifactId>config-builder</artifactId>
-    <version>1.0</version>
-    <contributors>
-        <contributor>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>Config-Builder</name>
+    <description>The Config Builder creates fully configured instances of config classes, using values from various sources like properties files, command line arguments etc.</description>
+    <url>https://github.com/TNG/config-builder</url>
+    <scm>
+        <url>git@github.com:TNG/config-builder.git</url>
+        <connection>SSH</connection>
+    </scm>
+    <developers>
+        <developer>
             <name>Matthias Bollwein</name>
             <email>matthias.bollwein@tngtech.com</email>
             <organization>TNG Technology Consulting</organization>
-        </contributor>
-        <contributor>
+        </developer>
+        <developer>
             <name>Thomas Endres</name>
             <email>thomas.endres@tngtech.com</email>
             <organization>TNG Technology Consulting</organization>
-        </contributor>
-        <contributor>
+        </developer>
+        <developer>
             <name>Andreas Würl</name>
             <email>andreas.wuerl@tngtech.com</email>
             <organization>TNG Technology Consulting</organization>
-        </contributor>
-    </contributors>
+        </developer>
+    </developers>
 
     <properties>
         <spring.version>3.1.4.RELEASE</spring.version>
