--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.tngtech.java</groupId>
@@ -22,7 +20,8 @@
         <url>git@github.com:TNG/config-builder.git</url>
         <connection>scm:git:git@github.com:TNG/config-builder.git</connection>
         <developerConnection>scm:git:git@github.com:TNG/config-builder.git</developerConnection>
-    </scm>
+      <tag>HEAD</tag>
+  </scm>
     <developers>
         <developer>
             <name>Matthias Bollwein</name>
@@ -103,11 +102,11 @@
     </profiles>
 
     <dependencies>
-        
+
         <dependency>
             <groupId>com.tngtech.java</groupId>
             <artifactId>property-loader</artifactId>
-            <version>0.9</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -170,10 +169,14 @@
         </dependency>
     </dependencies>
 
-    <repositories>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>sonatype-nexus-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
         <repository>
-            <id>mozquitobytes</id>
-            <url>http://www.mozquitobytes.com:8081/nexus/content/repositories/thirdparty</url>
+            <id>sonatype-nexus-staging</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
-    </repositories>
+    </distributionManagement>
 </project>
