--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -1,5 +1,6 @@
 com.tngtech.configbuilder.exception.NoConstructorFoundException = your config class does not implement a constructor matching the arguments passed to build()
 org.apache.commons.cli.ParseException = unable to parse command line arguments
+org.apache.commons.cli.UnrecognizedOptionException = one or more command line options could not be recognized
 com.tngtech.configbuilder.exception.TargetTypeException = cannot set field %s of type %s to object of type %s
 java.lang.InstantiationException = an InstantiationException was thrown while instantiating config class
 java.lang.reflect.InvocationTargetException = an InvocationTargetException was thrown while instantiating config class
