--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -6,4 +6,5 @@ java.lang.reflect.InvocationTargetException = an InvocationTargetException was t
 java.lang.IllegalAccessException = an IllegalAccessException was thrown while instantiating config class, setting fields or invoking validation method
 com.tngtech.configbuilder.exception.ValidatorException = Validation found the following constraint violations:
 java.lang.IllegalArgumentException = cannot set field %s of type %s to object of type %s
+com.tngtech.configbuilder.exception.TypeTransformerException = couldn't find a transformer from %s to %s
 standardMessage = %s was thrown
