--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -8,5 +8,7 @@ java.lang.IllegalAccessException = an IllegalAccessException was thrown while in
 com.tngtech.configbuilder.exception.ValidatorException = Validation found the following constraint violations:
 java.lang.IllegalArgumentException = cannot set field %s of type %s to object of type %s
 com.tngtech.configbuilder.exception.TypeTransformerException = couldn't find a transformer from %s to %s
+com.tngtech.configbuilder.exception.PrimitiveParsingException = unable to parse "%s" to %s
 com.tngtech.configbuilder.exception.ImportedConfigurationException = couldn't find a field with the name %s
+com.tngtech.configbuilder.exception.FactoryInstantiationException = could not create an instance of %s
 standardMessage = %s was thrown
