--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
         <url>git@github.com:TNG/config-builder.git</url>
         <connection>scm:git:git@github.com:TNG/config-builder.git</connection>
         <developerConnection>scm:git:git@github.com:TNG/config-builder.git</developerConnection>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
     <developers>
         <developer>
             <name>Matthias Bollwein</name>
@@ -167,21 +167,25 @@
             <version>1.0.0.GA</version>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
-        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator-annotation-processor</artifactId>
             <version>4.1.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.5.2</version>
+            <version>${slf4j.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
+    <properties>
+        <slf4j.version>1.7.5</slf4j.version>
+    </properties>
     
 </project>
