--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: java
 install: "mvn install -DskipTests=true"
-script: "mvn test -e"
+script: "mvn -e clean test jacoco:report coveralls:report"
 jdk:
   - oraclejdk7
+  - oraclejdk8
+  - openjdk7
+
