--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,13 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator-annotation-processor</artifactId>
-            <version>5.2.4.Final</version>
+            <version>${hibernate-validator.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -199,6 +205,7 @@
 
     <properties>
         <slf4j.version>1.7.18</slf4j.version>
+        <hibernate-validator.version>4.3.1.Final</hibernate-validator.version>
     </properties>
     
 </project>
