--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
-install: "mvn install -DskipTests=true"
+install: "mvn clean install -DskipTests=true"
 script: "mvn -e clean test jacoco:report coveralls:report"
 jdk:
-  - oraclejdk7
+#  - oraclejdk7
   - oraclejdk8
+#  - openjdk6
 #  - openjdk7
-
