--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     </developers>
     <organization>
         <name>TNG Technology Consulting</name>
-        <url>http://www.tngtech.com/</url>
+        <url>https://www.tngtech.com/</url>
     </organization>
 
     <parent>
@@ -134,13 +134,11 @@
     </profiles>
 
     <dependencies>
-
         <dependency>
             <groupId>com.tngtech.java</groupId>
             <artifactId>property-loader</artifactId>
             <version>1.3.1</version>
         </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -156,13 +154,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>2.5.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.unitils</groupId>
-            <artifactId>unitils-core</artifactId>
-            <version>3.4.6</version>
+            <version>2.6.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
