--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,9 @@
     </dependencies>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.6</java.version>
         <slf4j.version>1.7.24</slf4j.version>
     </properties>
     
