--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: java
 install: "mvn clean install -DskipTests=true"
 script: "mvn -e clean test jacoco:report coveralls:report"
 jdk:
-#  - oraclejdk7
-  - oraclejdk8
-#  - openjdk6
-#  - openjdk7
+  - openjdk8
+  - openjdk9
+  - openjdk10
+  - openjdk11
+  - openjdk12
+  - openjdk13
+  - openjdk14
