--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,6 @@
     <developers>
         <developer>
             <name>Matthias Bollwein</name>
-            <email>matthias.bollwein@tngtech.com</email>
             <organization>TNG Technology Consulting</organization>
         </developer>
         <developer>
@@ -35,7 +34,11 @@
         </developer>
         <developer>
             <name>Andreas Würl</name>
-            <email>andreas.wuerl@tngtech.com</email>
+            <organization>TNG Technology Consulting</organization>
+        </developer>
+        <developer>
+            <name>Manfred Hanke</name>
+            <email>manfred.hanke@tngtech.com</email>
             <organization>TNG Technology Consulting</organization>
         </developer>
     </developers>
