--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,16 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version:
-          - 8
-          - 9
-          - 10
-          - 11
-          - 12
-          - 13
-          - 14
-          - 15
-          - 16
+        java-version: [8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
