relax Maven wagon plugin's check of public key certificates on Java 9 & 10
Since Sept 2021, the builds on Java 9/10 failed with the following [ERROR]:

Unresolveable build extension: Plugin org.sonatype.plugins:nexus-staging-maven-plugin:1.6.8 or one of its dependencies could not be resolved: Failed to read artifact descriptor for org.sonatype.plugins:nexus-staging-maven-plugin:jar:1.6.8: Could not transfer artifact org.sonatype.plugins:nexus-staging-maven-plugin:pom:1.6.8 from/to central (https://repo.maven.apache.org/maven2): transfer failed for https://repo.maven.apache.org/maven2/org/sonatype/plugins/nexus-staging-maven-plugin/1.6.8/nexus-staging-maven-plugin-1.6.8.pom: sun.security.validator.ValidatorException: PKIX path building failed: sun.security.provider.certpath.SunCertPathBuilderException: unable to find valid certification path to requested target -> [Help 2]
org.apache.maven.plugin.PluginManagerException: Plugin org.sonatype.plugins:nexus-staging-maven-plugin:1.6.8 or one of its dependencies could not be resolved: Failed to read artifact descriptor for org.sonatype.plugins:nexus-staging-maven-plugin:jar:1.6.8
    at org.apache.maven.plugin.internal.DefaultMavenPluginManager.setupExtensionsRealm (DefaultMavenPluginManager.java:849)
    at org.apache.maven.project.DefaultProjectBuildingHelper.createProjectRealm (DefaultProjectBuildingHelper.java:197)
    at org.apache.maven.project.DefaultModelBuildingListener.buildExtensionsAssembled (DefaultModelBuildingListener.java:101)
    at org.apache.maven.model.building.ModelBuildingEventCatapult$1.fire (ModelBuildingEventCatapult.java:44)
    at org.apache.maven.model.building.DefaultModelBuilder.fireEvent (DefaultModelBuilder.java:1375)
    at org.apache.maven.model.building.DefaultModelBuilder.build (DefaultModelBuilder.java:467)
    at org.apache.maven.model.building.DefaultModelBuilder.build (DefaultModelBuilder.java:447)
    at org.apache.maven.project.DefaultProjectBuilder.build (DefaultProjectBuilder.jav

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
           distribution: adopt
           java-version: ${{ matrix.java-version }}
       - name: Run tests
-        run: mvn -e test
+        run: mvn -e test -Dmaven.wagon.http.ssl.insecure=${{ matrix.java-version == 9 || matrix.java-version == 10 }}
 
   coverage:
     needs: test
