fix upload of code coverage report
The previous configuration gave:

> ['error'] None of the following appear to exist as files: ./**/target/site/jacoco/jacoco.xml
> ['error'] There was an error running the uploader: Error while cleaning paths. No paths matched existing files!

Signed-off-by: Manfred Hanke <Manfred.Hanke@tngtech.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Upload code coverage report
         uses: codecov/codecov-action@v3
         with:
-          files: ./**/target/site/jacoco/jacoco.xml
+          files: target/site/jacoco/jacoco.xml
           name: codecov
