--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [8, 9a, 10a, 11, 12a, 13a, 14a, 15a, 16a, 17, 18]
+        java-version: [8, 10a, 11, 12a, 13a, 14a, 15a, 16a, 17, 18]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
