--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,3 +39,12 @@ jobs:
         with:
           files: target/site/jacoco/jacoco.xml
           name: codecov
+
+  dependency-check:
+      needs: test
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v3
+        - name: Check dependencies
+          run: mvn -e dependency-check:check
