--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <email>manfred.hanke@tngtech.com</email>
             <organization>TNG Technology Consulting</organization>
         </developer>
+        <developer>
+            <name>Jan Thiart</name>
+            <email>jan.thiart@tngtech.com</email>
+            <organization>TNG Technology Consulting</organization>
+        </developer>
     </developers>
     <organization>
         <name>TNG Technology Consulting</name>
