Exclude Guava from dependency check
Signed-off-by: Jan Thiart <jan.thiart@tngtech.com>

--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,7 @@
                 <version>${dependency-check-maven.version}</version>
                 <configuration>
                     <failBuildOnCVSS>5</failBuildOnCVSS>
+                    <suppressionFile>.mvn/owasp-suppressions.xml</suppressionFile>
                 </configuration>
             </plugin>
         </plugins>
